--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -50,7 +50,7 @@
           <div class="header position-relative">
             <!-- brand logo -->
             <div class="header__logo">
-              <a href="index.html">
+              <a href="/">
                 <img
                   src="./assets/images/aqm-brand-logo.png"
                   width="160"
@@ -684,6 +684,11 @@
     <div id="contact-us" class="contact-us-area service-contact-bg section-space--ptb_100">
       <div class="container">
         <div class="row align-items-center">
+          <div class="col-lg-7 ms-auto">
+              <div class="conact-us-wrap-one">
+                  <h3 class="heading text-white">To make requests for <br>further information, <br><span class="text-color-primary">contact us</span>.</h3>
+              </div>
+          </div>
           <div class="col-lg-4">
             <div class="contact-info sytle-one service-contact text-left">
               <!-- <div class="contact-info-title-wrap text-center">
@@ -712,7 +717,7 @@
                     </div>
                   </div>
                 </a>
-                <a href="mailto:hello@mitech.com" class="single-contact-list">
+                <a href="mailto:hello@aquametrics.net" class="single-contact-list">
                   <div class="content-wrap">
                     <div class="content">
                       <div class="icon">
@@ -720,82 +725,12 @@
                       </div>
                       <div class="main-content">
                         <h6 class="heading">Say hello</h6>
-                        <div class="text">rbesson@rednmore.com</div>
+                        <div class="text">hello@aquametrics.net</div>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-            </div>
-          </div>
-
-          <div class="col-lg-7 ms-auto">
-            <div class="contact-form-service-wrap">
-              <div class="contact-title text-center section-space--mb_40">
-                <h3 class="mb-10">Need a hand?</h3>
-                <p class="text">
-                  Start a discussion with our specialist team today.
-                </p>
-              </div>
-
-              <!-- <form class="contact-form" id="contact-form-2" action="https://whizthemes.com/mail-php/jowel/mitech/php/services-mail.php" method="post"> -->
-              <form
-                class="contact-form"
-                id="contact-form-2"
-                action="https://htmldemo.net/mitech/rtl/assets/php/services-mail.php"
-                method="post"
-              >
-                <div class="contact-form__two">
-                  <div class="contact-input">
-                    <div class="contact-inner">
-                      <input name="con_name" type="text" placeholder="Name *" />
-                    </div>
-                    <div class="contact-inner">
-                      <input
-                        name="con_email"
-                        type="email"
-                        placeholder="Email *"
-                      />
-                    </div>
-                  </div>
-                  <!-- <div class="contact-select">
-                    <div class="form-item contact-inner">
-                      <span class="inquiry">
-                        <select id="Visiting" name="Visiting">
-                          <option disabled selected>
-                            Select Department to email
-                          </option>
-                          <option value="Your inquiry about">
-                            Your inquiry about
-                          </option>
-                          <option value="General Information Request">
-                            General Information Request
-                          </option>
-                          <option value="Partner Relations">
-                            Partner Relations
-                          </option>
-                          <option value="Careers">Careers</option>
-                          <option value="Software Licencing">
-                            Software Licencing
-                          </option>
-                        </select>
-                      </span>
-                    </div>
-                  </div> -->
-                  <div class="contact-inner contact-message">
-                    <textarea
-                      name="con_message"
-                      placeholder="Please describe what you need."
-                    ></textarea>
-                  </div>
-                  <div class="comment-submit-btn">
-                    <button class="ht-btn ht-btn-md" type="submit">
-                      Send message
-                    </button>
-                    <p class="form-messege-2"></p>
-                  </div>
-                </div>
-              </form>
             </div>
           </div>
         </div>
@@ -822,8 +757,8 @@
             <ul class="footer-widget__list">
               <li>Switzerland</li>
               <li>
-                <a href="mailto:contact@aeroland.com" class="hover-style-link"
-                  >rbesson@rednmore.com</a
+                <a href="mailto:hello@aquametrics.net" class="hover-style-link"
+                  >hello@aquametrics.net</a
                 >
               </li>
               <li>
@@ -856,28 +791,28 @@
               <li>
                 <a href="#services" class="hover-style-link">Manufacturing Support</a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="#services" class="hover-style-link">Marketing Services</a>
-              </li>
+              </li> -->
             </ul>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
+          <!-- <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
             <h6 class="footer-widget__title mb-20">Quick links</h6>
             <ul class="footer-widget__list">
-              <!-- <li>
+              <li>
                 <a href="#" class="hover-style-link">Pick up locations</a>
-              </li> -->
+              </li>
               <li>
                 <a href="#" class="hover-style-link">Terms of Payment</a>
               </li>
               <li>
                 <a href="#" class="hover-style-link">Privacy Policy</a>
               </li>
-              <!-- <li>
+              <li>
                 <a href="#" class="hover-style-link">Where to Find Us</a>
-              </li> -->
+              </li>
             </ul>
-          </div>
+          </div> -->
           <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
             <h6 class="footer-widget__title mb-20">Support</h6>
             <ul class="footer-widget__list">
@@ -923,12 +858,12 @@
         <div class="row align-items-center">
           <div class="col-md-6 text-center text-md-start">
             <span class="copyright-text"
-              >&copy; 2022 Aquametrics.
+              >{{ currentDateStr }} &copy; Aquametrics.
               <!-- <a href="https://hasthemes.com/">All Rights Reserved.</a> -->
               </span
             >
           </div>
-          <div class="col-md-6 text-center text-md-end">
+          <!-- <div class="col-md-6 text-center text-md-end">
             <ul class="list ht-social-networks solid-rounded-icon">
               <li class="item">
                 <a
@@ -971,7 +906,7 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
