--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -931,7 +931,7 @@
             <div class="logo">
               <a href="index.html">
                 <img
-                  src="./assets/images/logo/logo-dark.webp"
+                  src="./assets/images/aqm-brand-logo.png"
                   class="img-fluid"
                   alt=""
                 />
