Cleanup aquametrics website
Signed-off-by: Joey Akitoye <josephakitoye@gmail.com>

--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -23,12 +23,12 @@
             </div>
             <div class="top-bar-right">
               <ul class="top-bar-info">
-                <li class="info-item">
-                  <a href="tel:01228899900" class="info-link">
-                    <i class="info-icon fa fa-phone"></i>
-                    <span class="info-text"><strong>+41 76 327 63 40</strong></span>
-                  </a>
-                </li>
+<!--                <li class="info-item">-->
+<!--                  <a href="tel:01228899900" class="info-link">-->
+<!--                    <i class="info-icon fa fa-phone"></i>-->
+<!--                    <span class="info-text"><strong>+41 76 327 63 40</strong></span>-->
+<!--                  </a>-->
+<!--                </li>-->
                 <li class="info-item">
                   <i class="info-icon fa fa-map-marker-alt"></i>
                   <span class="info-text"
@@ -678,7 +678,7 @@
     </div>
     <!--====================  End of gradation process area  ====================-->
 
- 
+
 
     <!--============ Contact Us Area Start =================-->
     <div id="contact-us" class="contact-us-area service-contact-bg section-space--ptb_100">
@@ -704,20 +704,20 @@
               </div> -->
 
               <div class="contact-list-item">
-                <a href="tel:190068668" class="single-contact-list">
-                  <div class="content-wrap">
-                    <div class="content">
-                      <div class="icon">
-                        <span class="fal fa-phone"></span>
-                      </div>
-                      <div class="main-content">
-                        <h6 class="heading">Call for advice now!</h6>
-                        <div class="text">+41 76 327 63 40</div>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-                <a href="mailto:hello@aquametrics.net" class="single-contact-list">
+<!--                <a href="tel:190068668" class="single-contact-list">-->
+<!--                  <div class="content-wrap">-->
+<!--                    <div class="content">-->
+<!--                      <div class="icon">-->
+<!--                        <span class="fal fa-phone"></span>-->
+<!--                      </div>-->
+<!--                      <div class="main-content">-->
+<!--                        <h6 class="heading">Call for advice now!</h6>-->
+<!--                        <div class="text">+41 76 327 63 40</div>-->
+<!--                      </div>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </a>-->
+                <a href="mailto:hello@aquametrics.ch" class="single-contact-list">
                   <div class="content-wrap">
                     <div class="content">
                       <div class="icon">
@@ -725,7 +725,7 @@
                       </div>
                       <div class="main-content">
                         <h6 class="heading">Say hello</h6>
-                        <div class="text">hello@aquametrics.net</div>
+                        <div class="text">hello@aquametrics.ch</div>
                       </div>
                     </div>
                   </div>
@@ -757,17 +757,17 @@
             <ul class="footer-widget__list">
               <li>Switzerland</li>
               <li>
-                <a href="mailto:hello@aquametrics.net" class="hover-style-link"
-                  >hello@aquametrics.net</a
+                <a href="mailto:hello@aquametrics.ch" class="hover-style-link"
+                  >hello@aquametrics.ch</a
                 >
               </li>
-              <li>
-                <a
-                  href="tel:+41 76 327 63 40"
-                  class="hover-style-link text-black font-weight--bold"
-                  >+41 76 327 63 40</a
-                >
-              </li>
+<!--              <li>-->
+<!--                <a-->
+<!--                  href="tel:+41 76 327 63 40"-->
+<!--                  class="hover-style-link text-black font-weight&#45;&#45;bold"-->
+<!--                  >+41 76 327 63 40</a-->
+<!--                >-->
+<!--              </li>-->
               <!-- <li>
                 <a
                   href="https://hasthemes.com/"
