--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -717,7 +717,7 @@
 <!--                    </div>-->
 <!--                  </div>-->
 <!--                </a>-->
-                <a href="mailto:hello@aquametrics.ch" class="single-contact-list">
+                <a href="mailto:info@aquametrics.ch" class="single-contact-list">
                   <div class="content-wrap">
                     <div class="content">
                       <div class="icon">
@@ -725,7 +725,7 @@
                       </div>
                       <div class="main-content">
                         <h6 class="heading">Say hello</h6>
-                        <div class="text">hello@aquametrics.ch</div>
+                        <div class="text">info@aquametrics.ch</div>
                       </div>
                     </div>
                   </div>
@@ -757,8 +757,8 @@
             <ul class="footer-widget__list">
               <li>Switzerland</li>
               <li>
-                <a href="mailto:hello@aquametrics.ch" class="hover-style-link"
-                  >hello@aquametrics.ch</a
+                <a href="mailto:info@aquametrics.ch" class="hover-style-link"
+                  >info@aquametrics.ch</a
                 >
               </li>
 <!--              <li>-->
